fix: header icon mobile angepasst

--- a/css/header-footer.css
+++ b/css/header-footer.css
@@ -66,8 +66,8 @@ header {
         }
 
         img {
-            width: 56px;
-            height: 56px;
+            width: 82px;
+            height: 82px;
         }
 
         li {
